--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Avinash Singh</title>
+    <title>Nandan Grover Portfolio</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Avinash Singh Portfolio">
-    <meta name="author" content="Avinash Singh">
+    <meta name="description" content="Nandan Grover Portfolio">
+    <meta name="author" content="Nandan Grover">
     <link rel="shortcut icon" href="favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon.png">
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="assets/plugins/github-calendar/dist/github-calendar.css">
     <!-- github activity css -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+    <link rel="stylesheet" href="assets/plugins/github-activity/github-activity-0.1.5.min.css">
 
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
@@ -40,10 +41,10 @@
     <!-- ******HEADER****** -->
     <header class="header">
         <div class="container clearfix">
-            <img class="profile-image img-fluid float-left rounded-circle" src="assets/images/profile.png"
+            <img width="180px" height="180px" class="profile-image img-fluid float-left rounded-circle" src="assets/images/profile.jpeg"
                 alt="profile image" />
             <div class="profile-content float-left">
-                <h1 class="name">Avinash Singh</h1>
+                <h1 class="name">Nandan Grover</h1>
                 <h2 class="desc">Full Stack Developer</h2>
                 <ul class="social list-inline">
                     <li class="list-inline-item"><a href="mailto: nandangrover.5@gmail.com"><i
@@ -215,6 +216,23 @@
                     <!--//section-inner-->
                 </section>
                 <!--//section-->
+
+                <!--//section-->
+                <section class="github section">
+                    <div class="section-inner shadow-sm rounded">
+                        <h2 class="heading">My GitHub</h2>
+                        <div id="github-graph" class="github-graph">
+
+                        </div>
+                        <!--//github-graph-->
+                        <div id="ghfeed" class="ghfeed">
+                        </div>
+                        <!--//ghfeed-->
+
+                    </div>
+                    <!--//secton-inner-->
+                </section>
+                <!--//section-->
             </div>
             <!--//primary-->
             <div class="secondary col-lg-4 col-12">
@@ -228,7 +246,7 @@
                                 <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a
                                         href="mailto: nandangrover.5@gmail.com">nandangrover.5@gmail.com</a></li>
                                 <li><i class="fas fa-link"></i><span class="sr-only">Resume:</span><a
-                                        href="assets/resume/Resume.pdf" target="_blank">Download
+                                        href="https://nandangrover.herokuapp.com/download" target="_blank">Download
                                         Resume</a></li>
                             </ul>
                         </div>
@@ -519,7 +537,7 @@
     <footer class="footer">
         <div class="container text-center">
             <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a
-                    href="https://github.com/nandangrover" target="_blank">Avinash Singh</small>
+                    href="https://github.com/nandangrover" target="_blank">Nandan Grover</small>
         </div>
         <!--//container-->
     </footer>
